--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,8 +1,12 @@
 // Non-modular or client styles for .l-header region.
 
-.l-header {
-  border-bottom: 1px solid lightgrey;
+.l-header,
+.sticky {
   margin-bottom: 15px;
+}
+
+.sticky {
+  border-bottom: 1px solid $blue;
 }
 
 // Top Bar
@@ -10,7 +14,11 @@
 .top-bar {
   .title-area {
     h1 {
-      font-family: 'Pinyon Script', cursive;
+      font-family: 'Classica One', cursive;
+
+      a {
+        padding-top: 20px;
+      }
     }
   }
 }
