--- a/scss/app.scss
+++ b/scss/app.scss
@@ -33,13 +33,13 @@
 // The theme will have compilation errors if Foundation is not imported.
 
 // Global Zurb Foundation variables.
-@import "vendor/foundation/variables";
+@import "vendor/foundation/settings";
 // Comment out this import if you don't want to use normalize.
 @import "vendor/foundation/normalize";
 // Comment out this import below if you are customizing you imports below.
 @import "vendor/foundation/foundation";
 // Comment out this import if you don't want to use Bourbon, a replacement for Compass mixins.
-@import "bourbon";
+// @import "bourbon";
 
 
 // Import our mixins early so they can be used by other partials.
