--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,9 +1,5 @@
 // Non-modular or client styles for .l-footer region.
 
-
-.l-footer {}
-.l-footer-columns {}
-
 /*
 Sticky Footer Solution
 by Steve Hatcher
@@ -11,41 +7,40 @@ http://stever.ca
 http://www.cssstickyfooter.com
 */
 
-* {margin:0;padding:0;}
+* {
+  margin:0;
+  padding:0;
+}
 
 /* must declare 0 margins on everything, also for main layout components use padding, not
 vertical margins (top and bottom) to add spacing, else those margins get added to total height
 and your footer gets pushed down a bit more, creating vertical scroll bars in the browser */
 
-html, body {height: 100%;}
+html, body {
+  height: 100%;
+}
 
-#wrap {min-height: 100%;}
+.page {
+  min-height: 100%;
+}
 
-.page {overflow:auto;
-  padding-bottom: $footer-height;}  /* must be same height as the footer */
+.wrap-main {
+  overflow:auto;
+  padding-bottom: $footer-height;
+}  /* must be same height as the footer */
 
-footer {position: relative;
+footer {
+  position: relative;
   margin-top: -($footer-height); /* negative value of footer height */
   height: $footer-height;
-  clear:both;}
+  clear:both;
+}
 
 /*Opera Fix*/
 body:before {/* thanks to Maleika (Kohoutec)*/
-content:"";
-height:100%;
-float:left;
-width:0;
-margin-top:-32767px;/* thank you Erik J - negate effect of float*/
+  content:"";
+  height:100%;
+  float:left;
+  width:0;
+  margin-top:-32767px;/* thank you Erik J - negate effect of float*/
 }
-
-/* IMPORTANT
-
-You also need to include this conditional style in the <head> of your HTML file to feed this style to IE 6 and lower and 8 and higher.
-
-<!--[if !IE 7]>
-  <style type="text/css">
-    #wrap {display:table;height:100%}
-  </style>
-<![endif]-->
-
-*/
