Upgrade to last Foundation, optimize theme

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -34,16 +34,47 @@
 
 // Global Zurb Foundation variable overrides.
 @import "base/init";
-// Global Zurb Foundation variables.
-@import "vendor/variables";
-// @import "vendor/settings";
 // Comment out this import if you don't want to use normalize.
-@import "vendor/normalize";
-// Comment out this import below if you are customizing you imports below.
-@import "vendor/foundation";
+@import "../../zurb_foundation/scss/normalize";
 
-// Comment out this import if you don't want to use Bourbon, a replacement for Compass mixins.
-// @import "bourbon";
+// Comment out the imports you don't need below.
+@import "../../zurb_foundation/scss/foundation/components/grid";
+// @import "../../zurb_foundation/scss/foundation/components/accordion";
+@import "../../zurb_foundation/scss/foundation/components/alert-boxes";
+@import "../../zurb_foundation/scss/foundation/components/block-grid";
+// @import "../../zurb_foundation/scss/foundation/components/breadcrumbs";
+// @import "../../zurb_foundation/scss/foundation/components/button-groups";
+@import "../../zurb_foundation/scss/foundation/components/buttons";
+@import "../../zurb_foundation/scss/foundation/components/clearing";
+// @import "../../zurb_foundation/scss/foundation/components/dropdown";
+// @import "../../zurb_foundation/scss/foundation/components/dropdown-buttons";
+// @import "../../zurb_foundation/scss/foundation/components/flex-video";
+@import "../../zurb_foundation/scss/foundation/components/forms";
+// @import "../../zurb_foundation/scss/foundation/components/icon-bar";
+@import "../../zurb_foundation/scss/foundation/components/inline-lists";
+// @import "../../zurb_foundation/scss/foundation/components/joyride";
+// @import "../../zurb_foundation/scss/foundation/components/keystrokes";
+// @import "../../zurb_foundation/scss/foundation/components/labels";
+// @import "../../zurb_foundation/scss/foundation/components/magellan";
+@import "../../zurb_foundation/scss/foundation/components/orbit";
+@import "../../zurb_foundation/scss/foundation/components/pagination";
+// @import "../../zurb_foundation/scss/foundation/components/panels";
+// @import "../../zurb_foundation/scss/foundation/components/pricing-tables";
+// @import "../../zurb_foundation/scss/foundation/components/progress-bars";
+// @import "../../zurb_foundation/scss/foundation/components/range-slider";
+// @import "../../zurb_foundation/scss/foundation/components/reveal";
+// @import "../../zurb_foundation/scss/foundation/components/side-nav";
+// @import "../../zurb_foundation/scss/foundation/components/split-buttons";
+// @import "../../zurb_foundation/scss/foundation/components/sub-nav";
+// @import "../../zurb_foundation/scss/foundation/components/switches";
+@import "../../zurb_foundation/scss/foundation/components/tables";
+// @import "../../zurb_foundation/scss/foundation/components/tabs";
+@import "../../zurb_foundation/scss/foundation/components/thumbs";
+// @import "../../zurb_foundation/scss/foundation/components/tooltips";
+@import "../../zurb_foundation/scss/foundation/components/top-bar";
+@import "../../zurb_foundation/scss/foundation/components/type";
+// @import "../../zurb_foundation/scss/foundation/components/offcanvas";
+@import "../../zurb_foundation/scss/foundation/components/visibility";
 
 // Import our mixins early so they can be used by other partials.
 // Optional.
@@ -84,17 +115,12 @@
 @import "../fonts/foundation-icons/foundation-icons.css";
 @import "../fonts/grands/grands.css";
 @import "../fonts/raleway/ralewayc.css";
-@import "http://webfonts.ru/import/cinzel.css";
 
 hr {
   border: 0px none;
   height: 1px;
   opacity: 0.8;
-  background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
-  background-image: -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
-  background-image: -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
-  background-image: -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
-  background-image: linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
+  background-image: linear-gradient(to left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
   margin: 50px 0;
 }
 
