--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,9 +5,9 @@
     .name {
       h1  a {
         color: lighten(red, 15%);
-        font-family: 'Cinzel Decorative', cursive;
+        font-family: 'Great Vibes', cursive;
         font-size: 4rem;
-        margin-top:.5rem;
+        padding-top:1rem;
         position:relative;
         z-index:99;
       }
