--- a/scss/base/_init.scss
+++ b/scss/base/_init.scss
@@ -1,1 +1,4 @@
 $footer-height: 200px + 90px +100px;
+
+@import "../../zurb_foundation/scss/foundation/functions";
+@import "settings"; // Zurb Foundation settings
